--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,32 @@
+-i https://pypi.org/simple
+alembic==1.13.2; python_version >= '3.8'
 aniso8601==9.0.1
-blinker==1.8.2
-click==8.1.7
-Faker==28.1.0
-Flask==3.0.3
-Flask-Cors==5.0.0
-Flask-JWT-Extended==4.6.0
-Flask-RESTful==0.3.10
-Flask-SQLAlchemy==3.1.1
-greenlet==3.0.3
-importlib_metadata==8.4.0
-itsdangerous==2.2.0
-Jinja2==3.1.4
-MarkupSafe==2.1.5
-marshmallow==3.22.0
-packaging==24.1
-PyJWT==2.9.0
-python-dateutil==2.9.0.post0
+blinker==1.8.2; python_version >= '3.8'
+cachelib==0.13.0; python_version >= '3.8'
+click==8.1.7; python_version >= '3.7'
+faker==28.1.0; python_version >= '3.8'
+flask==3.0.3; python_version >= '3.8'
+flask-cors==5.0.0
+flask-jwt-extended==4.6.0; python_version >= '3.7' and python_version < '4'
+flask-migrate==4.0.7; python_version >= '3.6'
+flask-restful==0.3.10
+flask-session==0.8.0; python_version >= '3.8'
+flask-sqlalchemy==3.1.1; python_version >= '3.8'
+greenlet==3.0.3; python_version < '3.13' and platform_machine == 'aarch64' or (platform_machine == 'ppc64le' or (platform_machine == 'x86_64' or (platform_machine == 'amd64' or (platform_machine == 'AMD64' or (platform_machine == 'win32' or platform_machine == 'WIN32')))))
+importlib-metadata==8.4.0; python_version < '3.10'
+importlib-resources==6.4.4; python_version < '3.9'
+itsdangerous==2.2.0; python_version >= '3.8'
+jinja2==3.1.4; python_version >= '3.7'
+mako==1.3.5; python_version >= '3.8'
+markupsafe==2.1.5; python_version >= '3.7'
+marshmallow==3.22.0; python_version >= '3.8'
+msgspec==0.18.6; python_version >= '3.8'
+packaging==24.1; python_version >= '3.8'
+pyjwt==2.9.0; python_version >= '3.8'
+python-dateutil==2.9.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pytz==2024.1
-six==1.16.0
-SQLAlchemy==2.0.32
-typing_extensions==4.12.2
-Werkzeug==3.0.4
-zipp==3.20.1
+six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+sqlalchemy==2.0.32; python_version >= '3.7'
+typing-extensions==4.12.2; python_version >= '3.8'
+werkzeug==3.0.4; python_version >= '3.8'
+zipp==3.20.1; python_version >= '3.8'
