--- a/requirements.txt
+++ b/requirements.txt
@@ -30,3 +30,4 @@ sqlalchemy==2.0.32; python_version >= '3.7'
 typing-extensions==4.12.2; python_version >= '3.8'
 werkzeug==3.0.4; python_version >= '3.8'
 zipp==3.20.1; python_version >= '3.8'
+gunicorn==19.7.1
