--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,69 @@
--i https://pypi.org/simple
-alembic==1.13.2; python_version >= '3.8'
+alembic==1.13.2
 aniso8601==9.0.1
-blinker==1.8.2; python_version >= '3.8'
-cachelib==0.13.0; python_version >= '3.8'
-click==8.1.7; python_version >= '3.7'
-faker==28.1.0; python_version >= '3.8'
-flask==3.0.3; python_version >= '3.8'
-flask-cors==5.0.0
-flask-jwt-extended==4.6.0; python_version >= '3.7' and python_version < '4'
-flask-migrate==4.0.7; python_version >= '3.6'
-flask-restful==0.3.10
-flask-session==0.8.0; python_version >= '3.8'
-flask-sqlalchemy==3.1.1; python_version >= '3.8'
-greenlet==3.0.3; python_version < '3.13' and platform_machine == 'aarch64' or (platform_machine == 'ppc64le' or (platform_machine == 'x86_64' or (platform_machine == 'amd64' or (platform_machine == 'AMD64' or (platform_machine == 'win32' or platform_machine == 'WIN32')))))
-importlib-metadata==8.4.0; python_version < '3.10'
-importlib-resources==6.4.4; python_version < '3.9'
-itsdangerous==2.2.0; python_version >= '3.8'
-jinja2==3.1.4; python_version >= '3.7'
-mako==1.3.5; python_version >= '3.8'
-markupsafe==2.1.5; python_version >= '3.7'
-marshmallow==3.22.0; python_version >= '3.8'
-msgspec==0.18.6; python_version >= '3.8'
-packaging==24.1; python_version >= '3.8'
-pyjwt==2.9.0; python_version >= '3.8'
-python-dateutil==2.9.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+asttokens==2.4.1
+backcall==0.2.0
+bcrypt==4.2.0
+blinker==1.8.2
+cachelib==0.13.0
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
+decorator==5.1.1
+distlib==0.3.8
+executing==2.0.1
+Faker==28.1.0
+filelock==3.14.0
+Flask==3.0.3
+Flask-Bcrypt==1.0.1
+Flask-Cors==5.0.0
+Flask-JWT-Extended==4.6.0
+flask-marshmallow==1.2.1
+Flask-Migrate==4.0.7
+Flask-RESTful==0.3.10
+Flask-Session==0.8.0
+Flask-SQLAlchemy==3.1.1
+greenlet==3.0.3
+gunicorn==20.1.0
+honcho==1.1.0
+idna==3.7
+importlib_metadata==8.4.0
+importlib_resources==6.4.4
+ipdb==0.13.13
+ipython==8.12.3
+itsdangerous==2.2.0
+jedi==0.19.1
+Jinja2==3.1.4
+Mako==1.3.5
+MarkupSafe==2.1.5
+marshmallow==3.22.0
+marshmallow-sqlalchemy==1.0.0
+matplotlib-inline==0.1.7
+msgspec==0.18.6
+packaging==24.1
+parso==0.8.4
+pexpect==4.9.0
+pickleshare==0.7.5
+pipenv==2023.12.1
+platformdirs==4.2.2
+prompt_toolkit==3.0.47
+psycopg2-binary==2.9.9
+ptyprocess==0.7.0
+pure-eval==0.2.2
+Pygments==2.18.0
+PyJWT==2.9.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.1
-six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-sqlalchemy==2.0.32; python_version >= '3.7'
-typing-extensions==4.12.2; python_version >= '3.8'
-werkzeug==3.0.4; python_version >= '3.8'
-zipp==3.20.1; python_version >= '3.8'
-gunicorn==19.7.1
+requests==2.32.3
+six==1.16.0
+SQLAlchemy==2.0.32
+SQLAlchemy-serializer==1.4.12
+stack-data==0.6.3
+tomli==2.0.1
+traitlets==5.14.3
+typing_extensions==4.12.2
+urllib3==2.2.2
+virtualenv==20.26.2
+wcwidth==0.2.13
+Werkzeug==3.0.4
+zipp==3.20.1
